<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E91E63"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/flag" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/english_"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/dictionary"
            android:textColor="#DFD1D1"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/dictionaryUz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_book"
        android:drawablePadding="24dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/uzbek_english"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/dictionaryEn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_book_en"
        android:drawablePadding="24dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/english_english"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/dictionaryUz" />

    <TextView
        android:id="@+id/exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_task"
        android:drawablePadding="24dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/exercises"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/dictionaryEn" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#E4DEDE"
        app:layout_constraintTop_toBottomOf="@id/exercise" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_rate"
        android:drawablePadding="24dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/rate_this_app"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_share"
        android:drawablePadding="24dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/share_this_app"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/rate" />

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_about"
        android:drawablePadding="24dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/about_us"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/share" />
</androidx.constraintlayout.widget.ConstraintLayout>