<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/back"
        android:src="@drawable/ic_back"
        app:tint="#978D92"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toTopOf="@id/txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lineHeight="24dp"
        android:text="@string/this_dictionary_is_an_up_to_date_easy_reference_dictionary_ideal_for_learners_of_english_and_uzbek_of_all_ages_the_entries_cover_everyday_english_and_uzbek_words_and_phrases_so_you_can_be_sure_of_having_all_the_vocabulary_you_need"
        app:layout_constraintBottom_toTopOf="@id/line" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="#BAB2B2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/contacts"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/facebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact" />

    <TextView
        android:id="@+id/telegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_telegram"
        android:drawablePadding="16dp"
        android:text="@string/telegram"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook" />

    <TextView
        android:id="@+id/gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_gmail"
        android:drawablePadding="16dp"
        android:text="@string/gmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telegram" />
</androidx.constraintlayout.widget.ConstraintLayout>